# genetic-evidence-model

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  build_skill_bundle.sh  build_supplementary.sh  compile_paper.sh  pyproject.toml
.github/workflows/: validate.yml
annotations/: coverage.md  davis2011.raw.json  davis2011.yaml  duerr2006.yaml  gupta2015.raw.json  gupta2015.yaml  inouye2018.yaml  jossin2017.raw.json  jossin2017.yaml  nelson1992.raw.json  nelson1992.yaml
annotations/reviews/: duerr2006-review-2026-06-04.md  duerr2006-review-2026-06-04.yaml  inouye2018-review-2026-06-06.md  inouye2018-review-2026-06-06.yaml
annotations/v0/: duerr2006.yaml
annotations/v1/: duerr2006.yaml  inouye2018.yaml
case-reports/: davis2011.md  duerr2006.md  gupta2015.md  inouye2018.md  jossin2017.md  nelson1992.md
extraction/: extract_annotations.py  extract_annotations_pypdf.py  yaml_to_rdf.py
notes/: Handover.md  ROADMAP.md
paper/: main.tex  preamble.tex  references.bib  supplement.tex
paper/sections/: 01_intro.tex  02_background.tex  03_model.tex  04_examples.tex  05_workflow.tex  06_discussion.tex  07_conclusion.tex  s11_background.tex  s11_protocol_suite.tex  s12_protocol_suite.tex  s13_skills_note.tex  s14_ai_review_note.tex  s15_crosswalk.tex  s16_case_reports.tex  s17_coverage.tex  s2_tables.tex  (+2 more)
protocols/: LABELING_EXAMPLES.md  PROTOCOL.md  PROTOCOL_AUTONOMOUS.md  REVIEW_PROTOCOL.md  REVIEW_PROTOCOL_INTERACTIVE.md
schema/: EXTENSIONS.md  dimensions.md  examples.md  genetic_evidence.shacl.ttl
scripts/: compute_coverage.py  validate_annotations.py
(+2 files in other folders)
