[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genetic-evidence-model"
version = "0.1.0"
description = "Extract and model genetic evidence annotations from PDF sources"
readme = "README.md"
license = { file = "LICENSE-code.txt" }
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.23",
    "pypdf>=4.0",
    "pyyaml>=6.0",
]

[project.scripts]
extract-annotations = "extraction.extract_annotations:main"
extract-annotations-pypdf = "extraction.extract_annotations_pypdf:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["extraction*", "annotations*"]
